--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Shippuden</title>
     </head>
     <body>
-        <audio autoplay>
+        <audio controls autoplay>
             <source  src="./songs/naruto.mp3" type="audio/mp3">
         </audio>
        
