Update and rename index.html to home.html

--- a/home.html
+++ b/home.html
@@ -5,10 +5,13 @@
         <title>Shippuden</title>
     </head>
     <body>
-        <audio id="audio2" autoplay>
-            <source  src="./songs/naruto.mp3" type="audio/mp3">
-        </audio>
-       <iframe  style="pointer-events:none;" height="100%" width="100%" src="https://www.youtube.com/embed/0MM5lfk9H8k?controls=0&loop=1&autoplay=1&mute=1"></iframe>
+        <div id="audiobox" style="color: yellowgreen; font-size : 5pt; margin-right: 95%; margin-top: 0%; text-align: center;">
+            <audio id="audio2" autoplay>
+                <source  src="./songs/hp.mp3" type="audio/mp3">
+            </audio>
+       </div> 
+       
+        <iframe  style="pointer-events:none;" height="100%" width="100%" src="https://www.youtube.com/embed/0MM5lfk9H8k?controls=0&loop=1&autoplay=1&mute=1"></iframe>
         <div id="greeting" class="box-div">
             <h1 id="text-greeting" class="txt-div">
                 ،مرحبا <span class="name">إكرام</span> </br>
