--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <body>
         <div id="audiobox" style="color: yellowgreen; font-size : 5pt; margin-right: 95%; margin-top: 0%; text-align: center;">
             <audio id="audio2" autoplay>
-                <source  src="./songs/hp.mp3" type="audio/mp3">
+                <source  src="./songs/naruto.mp3" type="audio/mp3">
             </audio>
        </div> 
        
