--- a/home.html
+++ b/home.html
@@ -10,8 +10,11 @@
                 <source  src="./songs/naruto.mp3" type="audio/mp3">
             </audio>
        </div> 
-       
-        <iframe  style="pointer-events:none;" height="100%" width="100%" src="https://www.youtube.com/embed/0MM5lfk9H8k?controls=0&loop=1&autoplay=1&mute=1"></iframe>
+   
+        <video autoplay loop muted width="100%" height="100%">
+            <source src="./images/narutorun.mp4" type="video/mp4">
+        </video>
+        
         <div id="greeting" class="box-div">
             <h1 id="text-greeting" class="txt-div">
                 ،مرحبا <span class="name">إكرام</span> </br>
