--- a/lpage.html
+++ b/lpage.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="lpage.css">
-        <title>HB</title>
+        <title>Happy Birthday</title>
     </head>
     <body>
        
