--- a/home.html
+++ b/home.html
@@ -18,13 +18,13 @@
         <div id="greeting" class="box-div">
             <h1 id="text-greeting" class="txt-div">
                 ،مرحبا <span class="name">إكرام</span> </br>
-                ،أتمنى أن تكوني بخير، هذا الموقع البسيط صنع خصيصا لك</br>
+                ، هذا الموقع البسيط صنع خصيصا لك</br>
                 أليس هذا جميل ؟
             </h1>
             <input class="_input" id="input_Y_N" placeholder="المرجو الإجابة على السؤال هنا"></br>
            <div id="answerdiv">
             <h1 id="answer" class='txt-div'>
-                قبل أن ننتقل للتالي دعينا نخبرك أن جوابك لم يكن موفقا وهذا يعني أن لديك صعوبات مع اللغة العربية، للمزيد من المعلومات اضغطي 
+                قبل أن ننتقل للتالي دعينا نخبرك أن جوابك لم يكن موفقا وهذا يعني أن لديك مشاكل في اللغة العربية، للمزيد من المعلومات اضغطي 
                 </h1>
                 <a style="color: yellowgreen;" href="http://www.schoolarabia.net/arabic/estfham_7rofalgwab/estfham_7.htm">هنا</a></br>
            </div>
