--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
         <div id="greeting" class="box-div">
             <h1 id="text-greeting" class="txt-div">
                 ،مرحبا <span class="name">إكرام</span> </br>
-                ،هذا الموقع البسيط صنع خصيصا لك</br>
+                ،أتمنى أن تكوني بخير، هذا الموقع البسيط صنع خصيصا لك</br>
                 أليس هذا جميل ؟
             </h1>
             <input class="_input" id="input_Y_N" placeholder="المرجو الإجابة على السؤال هنا"></br>
